<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="reset_button">Reset</string>
    <string name="highscore_button">Highscore</string>
    <string name="image">Image</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="player_one">Player one</string>
    <string name="player_two">Player two</string>
    <string name="start_game">Start Game</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="SinglePlayer">Singleplayer?</string>
    <string name="single_toggle_text">Toggle Singleplayer</string>
    <string name="new_game_button">New Game</string>
    <string name="return_to_game">Return</string>
    <string name="delete_highscores_button">Delete all</string>
    <string name="save_score_button">Finish and Save</string>
</resources>
