<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame"
    android:weightSum="1">

    <TextView
        android:text="@string/tictactoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:id="@+id/textView2"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textColor="@color/colorGold"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/player_one"
        android:ems="10"
        android:id="@+id/txtPlayerOne"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/txtPlayerTwo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/player_two"
        android:ems="10"
        android:id="@+id/txtPlayerTwo"
        android:textAlignment="center"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/txtPlayerOne"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:text="@string/togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:id="@+id/toggleButton"
        android:hint="@string/SinglePlayer"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:hint="@string/single_toggle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:id="@+id/txtSingleToggle"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true">

    <Button
        android:text="@string/highscore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highscoreButton"
        android:textColor="@color/colorDarkGold"
        />

    <Button
        android:text="@string/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"
        android:textColor="@color/colorDarkGold"
        />


    </LinearLayout>


</RelativeLayout>